responsive horizontal scroll bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,12 @@ body {
     padding: 0; 
     border: 0; 
   }
-  html {
+  /* html {
     overflow-x: hidden;
     margin: 0; 
     padding: 0; 
     border: 0; 
-  }
+  } */
 
 /*SECTION*/
 .hovereffect {
